<resources>
    <string name="app_name">latihanpart2</string>
    <string name="login">LOGIN</string>
    <string name="todo">TODO</string>
    <string name="judul">JUDUL</string>
    <string name="biodata">BIODATA</string>
    <string name="nama">Nama : </string>
    <string name="m_adli_al_qardawi">M. Adli Al Qardawi</string>
    <string name="nama_app">Nama APP</string>
    <string name="biodata1">Biodata</string>
    <string name="nama">Nama :</string>
    <string name="jenis_kelamin">Jenis Kelamin :</string>
    <string name="m_adli_al_qardawi">M. Adli Al Qardawi</string>
    <string name="pria">Pria</string>
</resources>